--- a/crm_phonecall/views/crm_phonecall_view.xml
+++ b/crm_phonecall/views/crm_phonecall_view.xml
@@ -224,7 +224,7 @@
 
     <menuitem name="Phone Calls" id="menu_crm_case_phone"
               groups="sales_team.group_sale_salesman"
-              parent="sale.sale_order_menu" sequence="6" />
+              parent="sale.sale_menu_root" sequence="2" />
 
     <record model="ir.actions.act_window" id="crm_case_categ_phone_incoming0">
         <field name="name">Logged Calls</field>
@@ -323,3 +323,4 @@
               action="crm_case_categ_phone_outgoing0"/>
 
 </odoo>
+
