--- a/res_partner_active_type/views/res_partner_view.xml
+++ b/res_partner_active_type/views/res_partner_view.xml
@@ -16,7 +16,7 @@
         </record>
 
         <record id="action_active_contact" model="ir.actions.act_window">
-            <field name="name">Active Contact</field>
+            <field name="name">Active</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
@@ -36,13 +36,13 @@
         </record>
 
         <menuitem id="res_partner_menu_active_contact"
-            name="Active Contact"
+            name="Active"
             action="action_active_contact"
-            parent="contacts.menu_contacts"
+            parent="contacts.res_partner_menu_contacts"
             sequence="3"/>
 
         <record id="action_inactive_contact" model="ir.actions.act_window">
-            <field name="name">Inactive contact</field>
+            <field name="name">Inactive</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
@@ -62,13 +62,13 @@
         </record>
 
         <menuitem id="res_partner_menu_inactive_contact"
-            name="Inactive Contact"
+            name="Inactive"
             action="action_inactive_contact"
-            parent="contacts.menu_contacts"
+            parent="contacts.res_partner_menu_contacts"
             sequence="4"/>
 
         <record id="action_donotgo_contact" model="ir.actions.act_window">
-            <field name="name">DO NOT GO contact</field>
+            <field name="name">Do Not Go</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
@@ -88,13 +88,13 @@
         </record>
 
         <menuitem id="res_partner_menu_donotgo_contact"
-            name="DO NOT GO Contact"
+            name="Do Not Go"
             action="action_donotgo_contact"
-            parent="contacts.menu_contacts"
+            parent="contacts.res_partner_menu_contacts"
             sequence="5"/>
 
         <record id="action_cod_contact" model="ir.actions.act_window">
-            <field name="name">COD contact</field>
+            <field name="name">COD</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.partner</field>
             <field name="view_type">form</field>
@@ -114,10 +114,34 @@
         </record>
 
         <menuitem id="res_partner_menu_cod_contact"
-            name="COD Contact"
+            name="COD"
             action="action_cod_contact"
-            parent="contacts.menu_contacts"
+            parent="contacts.res_partner_menu_contacts"
             sequence="6"/>
+
+        <record id="action_all_contact" model="ir.actions.act_window">
+            <field name="name">All</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="search_view_id" ref="base.view_res_partner_filter"/>
+            <field name="help" type="html">
+              <p class="oe_view_nocontent_create">
+                Click to add a ALL contact in your contacts directory.
+              </p><p>
+                Odoo helps you easily track all activities related to
+                a customer: discussions, history of business opportunities,
+                documents, etc.
+              </p>
+            </field>
+        </record>
+
+        <menuitem id="res_partner_menu_all_contact"
+            name="All"
+            action="action_all_contact"
+            parent="contacts.res_partner_menu_contacts"
+            sequence="1"/>
 
     </data>
 </odoo>
